# tuteco-knowledge-base

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
apple_scripts/: ExportMarkdownDocumentation.applescript
infrastructure/: convert_data.sh  convert_structure.sh  nginx.conf  processing_script_data.sh  run_nginx.sh
powershell_scripts/: README.md  collect_info.ps1  device_info.ps1  software_info.ps1
python_scripts/: Dockerfile  pyproject.toml
python_scripts/core/: __init__.py  filesystem.py  logger.py
python_scripts/scripts/: convert_data.py  convert_structure.py  processing_script_data.py
src/: App.tsx  index.css  main.tsx
src/components/: Detail.tsx  Details.tsx  EntityProperty.tsx  EntityPropertyLink.tsx  EntityPropertyNested.tsx  EntityPropertyString.tsx  Header.tsx  Links.tsx  Main.tsx  Sidebar.tsx  Welcome.tsx
src/components/UI/: Accordion.tsx  AccordionItem.tsx  ButtonWithIcon.tsx  Tile.tsx
src/hooks/: useMediaQuery.ts
src/model/: datatypes.ts
src/store/: NavigationContext.tsx  StructureContext.tsx
src/utils/: fetch.ts
