[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Alex Widiker <alex.widiker@tuteco.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
markdown = "^3.7"
bs4 = "^0.0.2"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']
skip-string-normalization = true
extend-exclude = '''
  /(
    | uncommitted
  )/
'''
color = true

[tool.isort]
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
profile = "black"
multi_line_output = 3
line_length = 120
supported_extensions = ['py']
skip_glob = ['uncommitted']
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
force_sort_within_sections = true
ignore_whitespace = true
color_output = true